--- a/desaf4.html
+++ b/desaf4.html
@@ -6,7 +6,12 @@
    </head>
    <body>
        <script>
-        
+        var cont=32
+        cont=parseFloat(cont)
+        while(cont<=85){
+            console.log(cont)
+        cont++
+        }
        </script>
    </body>
 </html>
