--- a/desaf5.html
+++ b/desaf5.html
@@ -6,7 +6,12 @@
    </head>
    <body>
        <script>
-        
+        for (var i=1;i<=450;i++){
+            if(i%7==0){
+                console.log(i)
+            }
+
+        }
        </script>
    </body>
 </html>
